--- a/weDrive/Base.lproj/Main.storyboard
+++ b/weDrive/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="igJ-Vb-7IH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -357,55 +357,6 @@
             </objects>
             <point key="canvasLocation" x="1153" y="-296"/>
         </scene>
-        <!--Signup Login View Controller-->
-        <scene sceneID="U0t-fe-snJ">
-            <objects>
-                <viewController id="igJ-Vb-7IH" customClass="SignupLoginViewController" customModule="weDrive" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="82Y-OD-Qdk"/>
-                        <viewControllerLayoutGuide type="bottom" id="6k2-IQ-wmh"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="9wA-9l-W3W">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AaH-a6-iXB">
-                                <rect key="frame" x="26" y="120" width="548" height="30"/>
-                                <state key="normal" title="Basic Login">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="basicLoginButton:" destination="igJ-Vb-7IH" eventType="touchUpInside" id="RbM-He-f5z"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ta-fL-S2E">
-                                <rect key="frame" x="26" y="180" width="548" height="30"/>
-                                <state key="normal" title="Logout">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="logOutButton:" destination="igJ-Vb-7IH" eventType="touchUpInside" id="Fhs-h5-LG8"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="AaH-a6-iXB" firstAttribute="leading" secondItem="9wA-9l-W3W" secondAttribute="leadingMargin" constant="10" id="4SO-d4-r3s"/>
-                            <constraint firstItem="6ta-fL-S2E" firstAttribute="leading" secondItem="9wA-9l-W3W" secondAttribute="leadingMargin" constant="10" id="Vbt-nt-jtQ"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="AaH-a6-iXB" secondAttribute="trailing" constant="10" id="czT-VZ-KUk"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="6ta-fL-S2E" secondAttribute="trailing" constant="10" id="wBe-ub-raC"/>
-                            <constraint firstItem="AaH-a6-iXB" firstAttribute="top" secondItem="82Y-OD-Qdk" secondAttribute="bottom" constant="100" id="wHS-4V-5Aq"/>
-                            <constraint firstItem="6ta-fL-S2E" firstAttribute="top" secondItem="AaH-a6-iXB" secondAttribute="bottom" constant="30" id="wp2-MX-Pyy"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <segue destination="vXZ-lx-hvc" kind="show" identifier="LoginSegue" id="inb-Zz-GoY"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Hqz-Uk-Qmn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-771" y="-478"/>
-        </scene>
         <!--Create Event View Controller-->
         <scene sceneID="Ly2-Sp-f7N">
             <objects>
@@ -576,7 +527,7 @@
         <image name="default.jpg" width="300" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="dFF-Yg-ybM"/>
         <segue reference="Bez-eO-JaA"/>
-        <segue reference="inb-Zz-GoY"/>
     </inferredMetricsTieBreakers>
 </document>
