--- a/weDrive/Base.lproj/Main.storyboard
+++ b/weDrive/Base.lproj/Main.storyboard
@@ -316,26 +316,50 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="62V-Vr-Z0b">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="88" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0mD-1M-qFD">
                                 <rect key="frame" x="0.0" y="60" width="600" height="540"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Cell" rowHeight="120" id="OdK-Bs-qq6" customClass="resultsCell" customModule="weDrive" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OdK-Bs-qq6" id="tEn-nJ-69J">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Profilename" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fie-jx-I6R">
+                                                    <rect key="frame" x="139" y="49" width="190" height="21"/>
+                                                    <animations/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <animations/>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                        <connections>
+                                            <outlet property="profileNameLbl" destination="fie-jx-I6R" id="JMs-Oc-2NN"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BIO-dT-Oat" id="r6R-hS-X4f"/>
+                                    <outlet property="delegate" destination="BIO-dT-Oat" id="oc7-Ic-p0x"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="62V-Vr-Z0b" firstAttribute="top" secondItem="8Pb-ka-EN6" secondAttribute="topMargin" constant="60" id="0sl-Pc-8Sd"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="62V-Vr-Z0b" secondAttribute="trailing" constant="-16" id="40D-gW-22K"/>
                             <constraint firstItem="BmL-O5-NTr" firstAttribute="top" secondItem="8Pb-ka-EN6" secondAttribute="topMargin" id="QAc-Op-Uuq"/>
                             <constraint firstItem="BmL-O5-NTr" firstAttribute="leading" secondItem="8Pb-ka-EN6" secondAttribute="leadingMargin" constant="-16" id="VNF-FJ-8kC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BmL-O5-NTr" secondAttribute="trailing" constant="-16" id="o15-q0-hrX"/>
-                            <constraint firstItem="sDl-L5-eDb" firstAttribute="top" secondItem="62V-Vr-Z0b" secondAttribute="bottom" id="owi-4H-b0C"/>
-                            <constraint firstItem="62V-Vr-Z0b" firstAttribute="leading" secondItem="8Pb-ka-EN6" secondAttribute="leadingMargin" constant="-16" id="sPQ-Rl-xSe"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ContactListTableView" destination="62V-Vr-Z0b" id="iCQ-gc-58O"/>
+                        <outlet property="resultsTable" destination="0mD-1M-qFD" id="AZS-Ty-phb"/>
                         <segue destination="T7S-h4-96C" kind="show" identifier="peopleAddedSegue" id="vW9-QI-bqa"/>
                         <segue destination="T7S-h4-96C" kind="show" identifier="contactCancelSegue" id="JkL-E7-UIJ"/>
                     </connections>
@@ -889,6 +913,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="2jH-pT-p4o"/>
-        <segue reference="Bez-eO-JaA"/>
+        <segue reference="vW9-QI-bqa"/>
     </inferredMetricsTieBreakers>
 </document>
