--- a/weDrive/Base.lproj/Main.storyboard
+++ b/weDrive/Base.lproj/Main.storyboard
@@ -630,7 +630,7 @@
                                 <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Cv-RC-DN4">
-                                        <rect key="frame" x="70" y="120" width="460" height="30"/>
+                                        <rect key="frame" x="70" y="73" width="460" height="30"/>
                                         <animations/>
                                         <color key="backgroundColor" red="0.13757557009999999" green="0.3712298389" blue="0.7527028093" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Login with Facebook">
@@ -642,7 +642,7 @@
                                         </connections>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jpD-C1-Fmc">
-                                        <rect key="frame" x="70" y="256" width="460" height="30"/>
+                                        <rect key="frame" x="70" y="157" width="460" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -651,7 +651,7 @@
                                         </connections>
                                     </textField>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1rH-eQ-JMi">
-                                        <rect key="frame" x="70" y="301" width="460" height="30"/>
+                                        <rect key="frame" x="70" y="202" width="460" height="30"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -660,7 +660,7 @@
                                         </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w1B-qz-jwF">
-                                        <rect key="frame" x="423" y="333" width="107" height="28"/>
+                                        <rect key="frame" x="423" y="234" width="107" height="28"/>
                                         <animations/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                         <state key="normal" title="Forgot password?">
@@ -671,28 +671,18 @@
                                             <segue destination="lUR-E9-edF" kind="show" id="vmS-Qn-4s3"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weDrive" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hXX-1o-deP">
-                                        <rect key="frame" x="70" y="20" width="460" height="80"/>
-                                        <animations/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="80" id="0FU-VP-1uR"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="65"/>
-                                        <color key="textColor" red="0.66568023990000003" green="0.66568023990000003" blue="0.66568023990000003" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-   or   -" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nD7-Tq-KSu">
-                                        <rect key="frame" x="70" y="179" width="460" height="21"/>
+                                        <rect key="frame" x="70" y="119" width="460" height="21"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="IHn-7O-RsI"/>
+                                            <constraint firstAttribute="height" constant="21" id="heF-4u-oUE"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T5h-ll-2aT">
-                                        <rect key="frame" x="70" y="431" width="460" height="30"/>
+                                        <rect key="frame" x="70" y="332" width="460" height="30"/>
                                         <animations/>
                                         <state key="normal" title="Sign up">
                                             <color key="titleColor" red="0.31598182120000001" green="0.31697922690000002" blue="0.34197443179999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -703,7 +693,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6CM-kV-cvo">
-                                        <rect key="frame" x="70" y="371" width="460" height="30"/>
+                                        <rect key="frame" x="70" y="272" width="460" height="30"/>
                                         <animations/>
                                         <color key="backgroundColor" red="0.27089192439999998" green="0.77874447599999996" blue="0.3756915073" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Login">
@@ -714,43 +704,53 @@
                                             <action selector="loginButton:" destination="8h1-lI-XRO" eventType="touchUpInside" id="WSd-Zy-Q4R"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="weDrive" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="hXX-1o-deP">
+                                        <rect key="frame" x="70" y="0.0" width="460" height="63"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="63" id="TG3-Di-8ph"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="65"/>
+                                        <color key="textColor" red="0.66568023990000003" green="0.66568023990000003" blue="0.66568023990000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="leading" secondItem="jpD-C1-Fmc" secondAttribute="leading" id="0Rs-iX-iIq"/>
-                                    <constraint firstItem="hXX-1o-deP" firstAttribute="leading" secondItem="uBq-XT-W1Y" secondAttribute="leading" constant="70" id="2gZ-7D-M6j"/>
-                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="trailing" secondItem="w1B-qz-jwF" secondAttribute="trailing" id="4NP-J3-OUd"/>
-                                    <constraint firstItem="6CM-kV-cvo" firstAttribute="leading" secondItem="1rH-eQ-JMi" secondAttribute="leading" id="EGN-DA-TZ5"/>
-                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="trailing" secondItem="9Cv-RC-DN4" secondAttribute="trailing" id="J3L-wP-eEc"/>
-                                    <constraint firstItem="6CM-kV-cvo" firstAttribute="trailing" secondItem="w1B-qz-jwF" secondAttribute="trailing" id="J5s-ED-KEQ"/>
-                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="top" secondItem="jpD-C1-Fmc" secondAttribute="bottom" constant="15" id="Kou-hL-ndD"/>
-                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="leading" secondItem="jpD-C1-Fmc" secondAttribute="leading" id="LUP-3h-2PN"/>
-                                    <constraint firstItem="hXX-1o-deP" firstAttribute="leading" secondItem="9Cv-RC-DN4" secondAttribute="leading" id="P2A-kB-Tcv"/>
-                                    <constraint firstItem="hXX-1o-deP" firstAttribute="top" secondItem="uBq-XT-W1Y" secondAttribute="top" constant="20" id="PmP-1x-whK"/>
-                                    <constraint firstAttribute="bottom" secondItem="T5h-ll-2aT" secondAttribute="bottom" constant="17" id="RX6-75-nQJ"/>
-                                    <constraint firstItem="T5h-ll-2aT" firstAttribute="leading" secondItem="6CM-kV-cvo" secondAttribute="leading" id="WcB-dM-6iC"/>
-                                    <constraint firstItem="6CM-kV-cvo" firstAttribute="top" secondItem="w1B-qz-jwF" secondAttribute="bottom" constant="10" id="X50-QS-HUH"/>
-                                    <constraint firstItem="jpD-C1-Fmc" firstAttribute="trailing" secondItem="1rH-eQ-JMi" secondAttribute="trailing" id="aoP-8t-s8m"/>
-                                    <constraint firstItem="T5h-ll-2aT" firstAttribute="trailing" secondItem="6CM-kV-cvo" secondAttribute="trailing" id="cMV-gf-3cx"/>
-                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="leading" secondItem="9Cv-RC-DN4" secondAttribute="leading" id="f8o-MS-qOS"/>
-                                    <constraint firstItem="T5h-ll-2aT" firstAttribute="top" secondItem="6CM-kV-cvo" secondAttribute="bottom" constant="30" id="f8u-nY-NVn"/>
-                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="trailing" secondItem="hXX-1o-deP" secondAttribute="trailing" id="gQa-3p-JZV"/>
-                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="centerX" secondItem="uBq-XT-W1Y" secondAttribute="centerX" id="i2m-yf-9Om"/>
-                                    <constraint firstItem="w1B-qz-jwF" firstAttribute="top" secondItem="1rH-eQ-JMi" secondAttribute="bottom" constant="2" id="irC-1x-ID6"/>
-                                    <constraint firstAttribute="trailing" secondItem="hXX-1o-deP" secondAttribute="trailing" constant="70" id="kZw-uW-QfQ"/>
-                                    <constraint firstItem="jpD-C1-Fmc" firstAttribute="trailing" secondItem="nD7-Tq-KSu" secondAttribute="trailing" id="lIM-hM-7Is"/>
-                                    <constraint firstItem="jpD-C1-Fmc" firstAttribute="top" secondItem="nD7-Tq-KSu" secondAttribute="bottom" constant="56" id="p4A-QR-DmZ"/>
-                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="top" secondItem="9Cv-RC-DN4" secondAttribute="bottom" constant="29" id="pk0-hn-n86"/>
-                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="top" secondItem="hXX-1o-deP" secondAttribute="bottom" constant="20" id="sBL-tE-WXE"/>
+                                    <constraint firstItem="6CM-kV-cvo" firstAttribute="leading" secondItem="T5h-ll-2aT" secondAttribute="leading" id="1B7-em-Tqt"/>
+                                    <constraint firstItem="T5h-ll-2aT" firstAttribute="top" secondItem="6CM-kV-cvo" secondAttribute="bottom" constant="30" id="23t-ry-vbO"/>
+                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="leading" secondItem="jpD-C1-Fmc" secondAttribute="leading" id="4PF-RR-ZMp"/>
+                                    <constraint firstItem="jpD-C1-Fmc" firstAttribute="leading" secondItem="1rH-eQ-JMi" secondAttribute="leading" id="A9f-jk-dfB"/>
+                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="trailing" secondItem="jpD-C1-Fmc" secondAttribute="trailing" id="BYE-tE-dwl"/>
+                                    <constraint firstAttribute="bottom" secondItem="T5h-ll-2aT" secondAttribute="bottom" constant="102" id="GJE-bN-CvS"/>
+                                    <constraint firstItem="hXX-1o-deP" firstAttribute="top" secondItem="uBq-XT-W1Y" secondAttribute="top" id="Jfv-7b-xhD"/>
+                                    <constraint firstItem="hXX-1o-deP" firstAttribute="leading" secondItem="uBq-XT-W1Y" secondAttribute="leading" constant="70" id="Klf-Yo-E9K"/>
+                                    <constraint firstAttribute="trailing" secondItem="hXX-1o-deP" secondAttribute="trailing" constant="70" id="KoR-2e-sea"/>
+                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="trailing" secondItem="jpD-C1-Fmc" secondAttribute="trailing" id="MTZ-ul-h2G"/>
+                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="trailing" secondItem="hXX-1o-deP" secondAttribute="trailing" id="OVu-HI-9el"/>
+                                    <constraint firstItem="w1B-qz-jwF" firstAttribute="trailing" secondItem="6CM-kV-cvo" secondAttribute="trailing" id="UBh-5a-cUr"/>
+                                    <constraint firstItem="6CM-kV-cvo" firstAttribute="top" secondItem="w1B-qz-jwF" secondAttribute="bottom" constant="10" id="Uwj-XU-oBy"/>
+                                    <constraint firstItem="6CM-kV-cvo" firstAttribute="centerX" secondItem="uBq-XT-W1Y" secondAttribute="centerX" id="V3i-pM-5Aj"/>
+                                    <constraint firstItem="nD7-Tq-KSu" firstAttribute="top" secondItem="9Cv-RC-DN4" secondAttribute="bottom" constant="16" id="Xmm-Zk-oee"/>
+                                    <constraint firstItem="jpD-C1-Fmc" firstAttribute="top" secondItem="nD7-Tq-KSu" secondAttribute="bottom" constant="17" id="Ypj-UR-t4I"/>
+                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="leading" secondItem="6CM-kV-cvo" secondAttribute="leading" id="aro-9g-7jg"/>
+                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="top" secondItem="hXX-1o-deP" secondAttribute="bottom" constant="10" id="dyD-hW-dX4"/>
+                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="leading" secondItem="nD7-Tq-KSu" secondAttribute="leading" id="pdE-nQ-Ioh"/>
+                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="trailing" secondItem="nD7-Tq-KSu" secondAttribute="trailing" id="rpV-aU-qQl"/>
+                                    <constraint firstItem="9Cv-RC-DN4" firstAttribute="leading" secondItem="hXX-1o-deP" secondAttribute="leading" id="vL6-KJ-5rg"/>
+                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="top" secondItem="jpD-C1-Fmc" secondAttribute="bottom" constant="15" id="wYy-Q7-Efh"/>
+                                    <constraint firstItem="T5h-ll-2aT" firstAttribute="trailing" secondItem="6CM-kV-cvo" secondAttribute="trailing" id="xAt-dS-2KE"/>
+                                    <constraint firstItem="w1B-qz-jwF" firstAttribute="top" secondItem="1rH-eQ-JMi" secondAttribute="bottom" constant="2" id="xqA-l1-KPj"/>
+                                    <constraint firstItem="1rH-eQ-JMi" firstAttribute="trailing" secondItem="w1B-qz-jwF" secondAttribute="trailing" id="zei-Ye-u5S"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="uBq-XT-W1Y" firstAttribute="bottom" secondItem="qJF-NM-jhx" secondAttribute="top" id="0Tr-Ic-WjO"/>
-                            <constraint firstAttribute="trailing" secondItem="uBq-XT-W1Y" secondAttribute="trailing" id="aNo-Vd-gOW"/>
-                            <constraint firstItem="uBq-XT-W1Y" firstAttribute="top" secondItem="RmO-p3-uYz" secondAttribute="bottom" id="qCa-dx-8Nw"/>
-                            <constraint firstItem="uBq-XT-W1Y" firstAttribute="leading" secondItem="Vxy-HZ-K7b" secondAttribute="leading" id="uxX-xS-ZuK"/>
+                            <constraint firstItem="uBq-XT-W1Y" firstAttribute="leading" secondItem="Vxy-HZ-K7b" secondAttribute="leading" id="CSd-vd-wdt"/>
+                            <constraint firstItem="uBq-XT-W1Y" firstAttribute="top" secondItem="RmO-p3-uYz" secondAttribute="bottom" id="D1V-Hg-UoW"/>
+                            <constraint firstItem="uBq-XT-W1Y" firstAttribute="bottom" secondItem="qJF-NM-jhx" secondAttribute="top" id="Dtu-pr-mzn"/>
+                            <constraint firstAttribute="trailing" secondItem="uBq-XT-W1Y" secondAttribute="trailing" id="hzY-Xy-obU"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="Q8w-20-vq2"/>
